video authentication, need to fix the auth

--- a/public/video.html
+++ b/public/video.html
@@ -13,7 +13,7 @@
   <h2>Testando Streaming</h2>
 
   <video id="videoplayer" controls>
-    <source src="/episodes/stream?videos/course-46/Orca_Vibes-Gypsy.mp4"/>
+    <source type="video/mp4" src="/episodes/stream?videoUrl=videos/course-46/Orca_Vibes-Gypsy.mp4"/>
   </video>
 
   <!-- <script>
